--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "## Getting Started 1. Install npm packages:",
   "main": "server.js",
   "dependencies": {
+    "@prisma/client": "^2.18.0",
+    "apollo-server": "^2.21.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
-    "join-monster": "^3.0.1",
+    "join-monster": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1"
   },
   "scripts": {
@@ -22,5 +25,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prisma": "^2.18.0"
+  }
 }
