--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "eslint": "^7.31.0",
     "http-proxy-middleware": "^2.0.1",
     "next": "10.0.7",
+    "notistack": "^1.0.10",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
