--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "axios": "^0.21.1",
     "eslint": "^7.31.0",
     "http-proxy-middleware": "^2.0.1",
-    "next": "10.0.7",
+    "next": "^11.1.0",
     "notistack": "^1.0.10",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
