--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,11 @@
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd frontend && npm run dev",
-    "seed": "node scripts/seedDB.js",
-    "install": "cd frontend && npm install",
-    "build": "cd frontend && npm run build",
+    "start:prod": "node ./server.js",
+    "start:dev": "concurrently \"nodemon --ignore '../frontend/*'\" \"npm run client\"",
+    "client": "cd ../frontend && npm run dev",
+    "install": "cd ../frontend && npm install",
+    "build": "cd ../frontend && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [],
