--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development next dev",
-    "build": "NODE_ENV=production next build",
+    "dev": "NODE_ENV='development' node server.js",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.21.1",
     "eslint": "^7.31.0",
+    "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
     "next": "^11.1.0",
     "notistack": "^1.0.10",
