--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NODE_ENV='development' node server.js",
-    "build": "next build && next export",
+    "build": "NODE_ENV='production' next build && next export",
     "start": "next start"
   },
   "dependencies": {
