--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'frontend/*'\" \"npm run client\"",
+    "start:dev": "concurrently \"nodemon\" \"npm run client\"",
     "client": "cd frontend && npm run dev",
     "install": "cd frontend && npm install",
     "build": "cd frontend && npm run build",
