--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build && next export",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -19,5 +19,6 @@
     "notistack": "^1.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
-  }
+  },
+  "cacheDirectories": [".next/cache"]
 }
