--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sequelize": "^6.5.1"
   },
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev -p $PORT",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon\" \"npm run client\"",
     "client": "cd frontend && npm run dev",
