--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next build && next export",
-    "start": "next start -p $PORT"
+    "build": "next build && next export"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
