--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next build && next export"
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
