--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon\" \"npm run client\"",
     "client": "cd frontend && npm run dev",
-    "install": "cd frontend && npm install",
-    "build": "cd frontend && npm run build",
-    "heroku-postbuild": "npm run build"
+    "install": "cd frontend && npm install"
   },
   "keywords": [],
   "author": "",
