--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
-  "cacheDirectories": [".next/cache"]
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
