--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon\" \"npm run client\"",
-    "client": "cd frontend && npm run dev",
-    "build": "node server.js"
+    "client": "cd frontend && npm run dev"
   },
   "keywords": [],
   "author": "",
