--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": ">=14.16.1",
+    "npm": "~7.16.0"
+  }
 }
