--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@types/jest": "^27.0.1",
     "axios": "^0.21.1",
     "eslint": "^7.31.0",
     "express": "^4.17.1",
@@ -22,5 +24,11 @@
   },
   "cacheDirectories": [
     ".next/cache"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "jest": "^27.1.0"
+  }
 }
