--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "NODE_ENV='development' node server.js",
     "build": "next build && next export",
     "start": "next start",
     "test": "jest"
@@ -27,6 +27,7 @@
   ],
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "jest": "^27.1.0"
