--- a/package.json
+++ b/package.json
@@ -11,19 +11,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "concurrently": "^6.2.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "concurrently": "^6.5.1",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.5.1"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "engines": {
-    "node": ">=14.16.1",
-    "npm": "~7.16.0"
-  }
+  "license": "ISC"
 }
