--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^6.5.1",
     "dotenv": "^8.6.0",
     "express": "^4.18.1",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
