--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.5.1",
     "dotenv": "^8.6.0",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.18.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
