--- a/package.json
+++ b/package.json
@@ -1,33 +1,22 @@
 {
   "name": "you-bet",
   "version": "1.0.0",
-  "description": "## Getting Started 1. Install npm packages:",
+  "description": "backend and web-ui for friendly betting app",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd frontend && npm run dev",
-    "start:prod": "node server.js",
-    "db:migrate": "npx sequelize-cli db:migrate",
-    "db:migrate:undo": "npx sequelize-cli db:migrate:undo"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^6.5.1",
-    "dotenv": "^8.6.0",
-    "expo-server-sdk": "^3.6.0",
-    "express": "^4.18.1",
-    "if-env": "^1.0.4",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.20.1"
+    "start:prod": "cd backend && npm run start:prod",
+    "start:dev": "concurrently \"npm run start:dev:server\" \"npm run start:dev:web\"",
+    "start:dev:server": "cd backend && npm run start:dev",
+    "start:dev:web": "cd frontend && npm run dev",
+    "db:migrate": "cd backend && npm run db:migrate",
+    "db:migrate:undo": "cd backend && npm run db:migrate:undo"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.18.0",
-    "sequelize-cli": "^6.4.1"
+    "concurrently": "^7.2.2",
+    "if-env": "^1.0.4"
   }
 }
