--- a/backend/package.json
+++ b/backend/package.json
@@ -17,15 +17,18 @@
     "expo-server-sdk": "^3.6.0",
     "express": "^4.18.1",
     "if-env": "^1.0.4",
+    "jest": "^28.1.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.20.1"
+    "sequelize": "^6.20.1",
+    "supertest": "^6.2.4"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "eslint": "^8.18.0",
     "sequelize-cli": "^6.4.1"
   }
