add scripts for github workflow

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "start:dev": "nodemon server.js",
     "start:prod": "node server.js",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "db:migrate:undo": "npx sequelize-cli db:migrate:undo"
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "lint": "eslint",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
