--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "next": "^11.1.0",
     "notistack": "^1.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "lint": "eslint"
   },
   "cacheDirectories": [
     ".next/cache"
