--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "start:dev:server": "cd backend && npm run start:dev",
     "start:dev:web": "cd frontend && npm run dev",
     "db:migrate": "cd backend && npm run db:migrate",
-    "db:migrate:undo": "cd backend && npm run db:migrate:undo"
+    "db:migrate:undo": "cd backend && npm run db:migrate:undo",
+    "install": "npm run install:server && npm run install:web",
+    "install:server": "cd backend && npm install",
+    "install:web": "cd frontend && npm install",
+    "lint": "npm run lint:server",
+    "lint:server": "cd backend && npm run lint",
+    "lint:web": "cd frontend && npm run lint",
+    "test": "npm run test:backend",
+    "test:backend": "cd backend && npm run test"
   },
   "keywords": [],
   "author": "",
