--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "node": true,
     "commonjs": true,
-    "jest": true
+    "jest": true,
+    "es6": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
