--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,10 @@
     "expo-server-sdk": "^3.6.0",
     "express": "^4.18.1",
     "if-env": "^1.0.4",
-    "jest": "^28.1.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.20.1",
-    "supertest": "^6.2.4"
+    "sequelize": "^6.20.1"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +30,8 @@
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
     "eslint": "^8.18.0",
-    "sequelize-cli": "^6.4.1"
+    "jest": "^28.1.2",
+    "sequelize-cli": "^6.4.1",
+    "supertest": "^6.2.4"
   }
 }
